app/style/HomePage.less
@import (reference) "./main.less";
@import (reference) "./Icons.less";

.overview-header {
  padding-left: 63px;
  padding-top: 47px; 
  justify-content: space-between;
  background-color: var(--background-back-color);

  .tabs > .tab > a {
    margin-right: 8px;
    font-size: 11px;
    padding: 5px 10px 5px 10px;
  }

  .tabs > .tab > a.active {
    border: 1px solid var(--home-content-link);
    border-radius: 3px;
  }
}

.overview-content-wrapper {
  justify-content: space-between;
  display: flex;
  background-color: var(--background-back-color);
  padding-left: 63px;
}

.overview-spendable-locked-wrapper {
  padding-top: 132px;
}

.overview-transactions-ticket {
  padding: 30px 63px;
}

.overview-balance {
  font-size: 42px;
  color: var(--input-color-default);
  font-family: @font-family-monospaced;
}

.overview-balance-label {
  font-family: @font-family-regular;
  font-size: 11px;
  color: var(--overview-balance-label);
}

.overview-balance-unit {
  font-size: 17px;
  color: var(--input-color-default);
}

.overview-spendable-locked-wrapper-area {
  margin-bottom: 14px;
  &.tickets {
    margin-bottom: 8px;
  }
}

.overview-balance-spendable-locked {
  font-size: 17px;
  color: var(--input-color-default);
  font-family: @font-family-monospaced;
  line-height: 18px;
  padding-left: 10px;
  margin-right: 2px;
  background-repeat: no-repeat;
  background-position: 0 50%;
  background-size: 7px;

  &.active {
    background-image: @legend-active;
  }
  
  &.voted {
    background-image: @legend-voted;
  }
  
  &.received {
    background-image: @legend-received;
  }

  &.sent {
    background-image: @legend-sent;
  }

  &.available {
    background-image: @legend-available;
  }

  &.locked {
    background-image: @legend-locked;
  }
}

.overview-balance-spendable-locked-text {
  font-size: 11px;
  color: var(--agenda-card-bottom-cfg);
  font-family: @font-family-regular;
  line-height: 13px;
  padding-top: 3px;
  margin-left: 10px;
  &.back {
    margin-left: 2px;
  }
}

.overview-balance-spendable-locked-label {
  font-size: 11px;
  color: var(--agenda-card-bottom-cfg);
  font-family: @font-family-regular;
  line-height: 13px;
  margin-left: 10px;
  margin-top: 4px;
}

.home-content-title {
  color: var(--stroke-color-hovered);
  font-size: 13px;
  font-family: @font-family-regular;
  margin-bottom: 10px;
  justify-content: space-between;
}

.ticket-tx-wrapper {
  margin-left: 40px;
}

.home-content-link {
  color: var(--home-content-link);
  font-size: 9px;
  font-family: @font-family-regular;
  cursor: pointer;
}

.home-content-link > a:hover {
  color: var(--input-color-default);
}

.overview-no-transactions > a,
.overview-no-tickets > a {
  display: block;
  background-color: var(--background-back-color);
  padding: 20px 20px 20px 48px;
  background-repeat: no-repeat;
  background-position: 16px 20px;
  background-size: 20px;
  text-decoration: none;
  color: var(--input-color-default);
  margin-bottom: 1px;
  cursor: pointer;
}

.overview-no-transactions {
  a.receive {
    background-image: @generate-addr-icon;
  }
  a.buy {
    background-image: @buy-decred-icon;
  }
}

.overview-no-tickets {
  width: 352px;
  a.purchaseTickets {
    background-image: @dummy-icon;
  }
  a.whatIsStaking {
    background-image: @what-is-staking-icon;
  }
  a.ticketLifeCycle {
    background-image: @ticket-lifecycle-icon;
  }
}

@media screen and (max-width: 1179px) {
  .overview-transactions-ticket {
    padding: 30px 20px;
  }
  
  .overview-header {
    padding-top: 60px;
    padding-left: 20px;
  }

  .overview-content-wrapper {
    padding-left: 20px;
  }

  .overview-spendable-locked-wrapper {
    padding-top: 114px;
  }
}

@media screen and (max-width: 768px) {
  .overview-tab-label {
    font-size: 0;
  }

  .overview-tab {
    display: inline-block;
    width: 30px;
    height: 30px;
    background-size: 16px;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    &.balance {
      background-image: @balanceTabIcon;
    }
    &.tickets {
      background-image: var(--menu-tickets-default);
    }
    &.tx {
      background-image: var(--menu-transactions-default);
    }
  }

  .overview-header {
    padding-left: 11px;
    padding-top: 40px;

    .tabs > .tab > a {
      padding: 0;
    }

    .tabs > .tab > a.active {
      border: 0;

      .overview-tab {
        border: 1px solid var(--home-content-link);
        border-radius: 3px;        
      }
    }
  }

  .overview-balance {
    font-size: 27px;
  }


  .overview-content-wrapper {
    padding-left: 11px;
    display: flex;
    flex-direction: column-reverse;
  }

  .overview-transactions-ticket.is-row {
    flex-direction: column;
  }

  .ticket-tx-wrapper {
    margin-left: 0;
    margin-top: 25px;
  }

  .home-content-title {
    width: 315px;
  }

  .overview-spendable-locked-wrapper {
    padding-top: 0;
    display: flex;
    justify-content: space-between;
    width: 315px;
    padding-left: 9px;
  }
}

